# TGF-TEB-Propagation-Geant4

./: CMakeLists.txt  Celestin_160MV.csv  Celestin_60MV.csv  README.md  benchmark.txt  python_job_local.py  stage1_process.m
Fermi_coordinates_velocity_calculator/: README.md  get_Fermi_velocity_and_position_and_LVLH_frame.py  requirements.txt  satellite_coordinates.py  test.py
Fermi_coordinates_velocity_calculator/dataFiles/: AGILE_orbital_info.txt  Fermi_GLAST_orbital_info.txt
Stephen_python_scripts/: before.py  detLeptons_1709922481075226121_542_15_10_Gaussian_0.out  inbetween_code.py
Stephen_python_scripts/input/: detParticles_4163046560010597821_541_15_30_Gaussian_0.out  detParticles_4205244574920676055_541_15_30_Gaussian_0.out  detParticles_888585448520351430_541_15_-13_31_1_30_2_0.out
Stephen_python_scripts/input/old/: detParticles_264819910240706423_541_15_30_Gaussian_0.out  detParticles_2935673658524686071_541_15_30_Gaussian_0.out  detParticles_2956138506673228842_541_15_30_Gaussian_0.out  detParticles_3751668779967399583_541_15_30_Gaussian_0.out  detParticles_5496664862796343370_541_15_30_Gaussian_0.out  detParticles_5747301446465801963_541_15_30_Gaussian_0.out  detParticles_7713357441182616314_541_15_30_Gaussian_0.out  detParticles_8374394603765439311_541_15_30_Gaussian_0.out
Stephen_python_scripts/input/old2/: detParticles_44148630669642738_541_15_-13_31_1_30_2_0.out  detParticles_6832312689218271740_541_15_-13_31_1_30_2_0.out
Stephen_python_scripts/input0/: detPhotons_1709922481075226121_542_15_10_Gaussian_0.out
Stephen_python_scripts/output/: elec_posi_ratio.txt  electrons_ener_momentums.txt  electrons_spec.txt  positrons_ener_momentums.txt  positrons_spec.txt
analysis/: AGILE_TEB_data_electrons.txt  AGILE_TEB_data_photons.txt  AGILE_TEB_data_positrons.txt  TEBfluence.fig  agile_TEB_lc.fig  agile_TEB_lc_zoom.fig  compa_spec_50km_10km_integration_squares.m  extract_TEB_particle_data_for_Geant4AsimMassModel.m  fluence_vs_alt_angle.eps  fused_output.out  get_fluences_AGILE_candidate_TEB.m  inside_10km_square.mat  inside_50km_square.mat  leptons.txt  level_curve_fluence.fig  photons.txt  pitch_angle_dist.eps  pitch_angle_dist.fig  pitch_angle_dist2.eps  pitch_angle_dist2.fig  plot_lightcurve_AGILE_candidate_TEB.m  plot_lightcurve_fermi_gbm_140204_tgf_teb.m  plot_lightcurve_fermi_gbm_140204_tgf_teb.m~  plot_pitch_angle_distribution_160km.m  plot_pitch_angle_distribution_160km_simple.m  plot_pitch_angle_distribution_160km_simple.m~  plot_pitch_angle_distribution_400km.m  plot_source_constraints.m  plot_source_constraints_gaussian.m  sampleDist.m  simulate_t50_asim_distribution.m  simulated_electron_arrival_time_list_teb_agile_short_radius_600keVthres.txt
docker_easy_deployment/: Dockerfile.technical  README.md  docker-compose.yml
docker_easy_deployment/interface/: installation_script_Ubuntu_Full_geant4_10.7.bash
src/: GNUmakefile  tgf_propa.cc
src/GeographicLib/: MagneticModel.hpp  SphericalEngine.hpp
src/cmake/modules/: FindMATIO.cmake
src/include/: ActionInitialization.hh  Analysis.hh  DetectorConstruction.hh  EarthMagField_GeographicLib.hh  EarthMagField_IGRF.hh  EarthMagField_WMM.hh  EventAction.hh  FieldSetup.hh  G4EmParticleList.hh  G4EmStandardPhysics_option1_dr.hh  G4EmStandardPhysics_option4_dr.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RegionInformation.hh  RunAction.hh  SD.hh  Settings.hh  StackingAction.hh  StepMax.hh  SteppingAction.hh  f77char.hh  f77cmplx.hh  f77matrx.hh  fortran.hh  geodetic_converter.hh  myG4FieldManager.hh  myUtils.hh
src/include/Bline_tracer/: G4BlineEquation.hh  G4BlineEventAction.hh  G4BlinePrimaryGeneratorAction.hh  G4BlineSteppingAction.hh  G4BlineTracer.hh  G4BlineTracerMessenger.hh
src/include/C/: coordinates_conversions.h  nrlmsise-00.h
src/include/old/: matlab_matio_output.hh
src/libsgp4/: CoordGeodetic.h  CoordTopocentric.h  DateTime.h  DecayedException.h  Eci.cc  Eci.h  Globals.h  Observer.h  OrbitalElements.h  SGP4.cc  SGP4.h  SatelliteException.h  SolarPosition.cc  SolarPosition.h  TimeSpan.h  Tle.cc  Tle.h  TleException.h  Util.h  Vector.h
src/src/: ActionInitialization.cc  Analysis.cc  DetectorConstruction.cc  EarthMagField_GeographicLib.cc  EarthMagField_IGRF.cc  EarthMagField_WMM.cc  EventAction.cc  FieldSetup.cc  G4EmParticleList.cc  G4EmStandardPhysics_option1_dr.cc  G4EmStandardPhysics_option4_dr.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RegionInformation.cc  RunAction.cc  SD.cc  Settings.cc  StackingAction.cc  StepMax.cc  SteppingAction.cc  myG4FieldManager.cc  myUtils.cc
src/src/C/: coordinates_conversions.c  sincos.c
src/src/C/MSIS/: nrlmsise-00.h
src/src/C/UUID/: uuid4.c  uuid4.h
src/src/C/WMM/: WMM_README.txt
src/src/C/WMM/src/: GeomagnetismHeader.h  GeomagnetismLibrary.c  wmm_file.c  wmm_grid.c  wmm_point.c
src/src/fortran/: igrf12.f  magfld.f
src/src/msis/: nrlmsise00_sub.for
src/src/old/: matlab_matio_output.cc
tests/: created_bremsstrahlung_spec.fig  created_bremsstrahlung_time.fig  created_electron_spec.fig  created_electrons_time.fig  created_photons  data_t50_rd_10km.mat  data_t50_rd_12km.mat  data_t50_rd_15km.mat  data_t50_t90_rd_15km_1MeV.mat  electron_process_decomposition.fig  energy_spectra_AGILE_TEB.fig  generate_TGF_lightcurve_spectrum_for_given_parameters.m  photon_spec.fig  plot_TGF_duration_t50_t90_any_alt.m  plot_created_bremss_photons_spec_time.m  plot_created_elecs_spec_time.m  plot_level_curve_tgf_20km.m  plot_lightcurves.m  plot_lightcurves2.m  plot_spec_photon_processes_decomp.m  plot_spectra_prim_seco.m  plot_t50_rd_10km.m  plot_t50_rd_compa.m  simple_test.m  spec_compare_alt.m  spec_photon_decomp.fig  spec_prim_sec.fig  spec_sec_decomp.fig  t50_rad_dist_simu.mat  t50_vs_rd.eps  t50_vs_rd.fig  t50_vs_rd_15km.eps  t50_vs_rd_comparison.fig  t50_vs_rd_different_alts.eps  t50_vs_rd_different_alts.fig  t50_vs_rd_different_alts_2.eps  t50_vs_rd_different_alts_2.fig  t50_vs_rd_e_more_1MeV_15km.fig  t90_duration_thres_300keV.eps  t90_duration_thres_300keV.fig  (+2 more)
